# elpi

./: .buildinfo  .gitattributes  .gitignore  .merlin  .merlin.in  .ocamlformat  .travis.yaml  .travis.yml  AUTHORS  AUTHORS.md  BUG_INPUT  BUG_REPRODUCTION  CHANGES.md  Changelog.md  DOC  ELPI.md  INCOMPATIBILITIES.md  LANGUAGE.md  LICENSE  META  META.elpi  META.ppx_deriving  Makefile  Makefile.common  README  README.md  README.txt  README_MATITA_WITH_ELPI.txt  TODO  about.html  bIA.ml  bIA.mli  bl.ml  builtin.elpi  builtins.elpi  client.ml  coq.elpi  coq.ml  custom.ml  default.nix  (+93 more)
matita/: Makefile  Makefile.defs.in  configure.ac
matita/components/: Makefile  Makefile.common  license  statuses.txt
matita/components/METAS/: meta.helm-content.src  meta.helm-content_pres.src  meta.helm-disambiguation.src  meta.helm-extlib.src  meta.helm-getter.src  meta.helm-grafite.src  meta.helm-grafite_engine.src  meta.helm-grafite_parser.src  meta.helm-library.src  meta.helm-logger.src  meta.helm-ng_cic_content.src  meta.helm-ng_disambiguation.src  meta.helm-ng_extraction.src  meta.helm-ng_kernel.src  meta.helm-ng_library.src  meta.helm-ng_paramodulation.src  meta.helm-ng_refiner.src  meta.helm-ng_tactics.src  meta.helm-registry.src  meta.helm-syntax_extensions.src  meta.helm-thread.src  meta.helm-xml.src
matita/components/content/: .depend  .depend.opt  Makefile  content.ml  (+8 more)
matita/matita/: .depend  .depend.opt  AUTHORS  DA_FARE  LICENSE  Makefile  applyTransformation.ml  applyTransformation.mli  buildTimeConf.ml.in  cicMathView.ml  cicMathView.mli  closed.xml  dictionary-matita.xml  lablGraphviz.ml  lablGraphviz.mli  matita.conf.xml.in  matita.glade  matita.glade.utf8  matita.gtkrc  matita.lang  matita.ma.templ  matita.ml  matita.txt  matitaEngine.ml  matitaEngine.mli  matitaExcPp.ml  matitaExcPp.mli  matitaGtkMisc.ml  matitaGtkMisc.mli  matitaGui.ml  matitaGui.mli  matitaGuiTypes.mli  matitaInit.ml  matitaInit.mli  matitaMathView.ml  matitaMathView.mli  matitaMisc.ml  matitaMisc.mli  matitaScript.ml  matitaScript.mli  (+9 more)
ocaml-elpi/: document_ocaml_ast_for_elpi.ml  dune  dune-project  main_ocaml_elpi_rewriter.ml  ocaml_ast.elpi  ocaml_ast_for_elpi.ml
ocaml-elpi/tests/: dune  dune.inc  gen_dune.ml  test_swap.elpi  test_swap.expected.ml  test_swap.ml
ppx_elpi/tests/: README.md  dune  dune.inc  gen_dune.ml  test_alias_type.expected.elpi  test_alias_type.expected.ml  test_alias_type.ml  test_container.expected.elpi  test_container.expected.ml  test_container.ml  test_double_contextual.expected.elpi  test_double_contextual.expected.ml  test_double_contextual.ml  test_mutual_adt.expected.elpi  test_mutual_adt.expected.ml  test_mutual_adt.ml  test_mutual_contextual.expected.ml  test_mutual_contextual.ml  test_mutual_contextual.ml.disabled  test_opaque_type.expected.ml  test_opaque_type.ml  test_opaque_type_alias.expected.elpi  test_opaque_type_alias.expected.ml  test_opaque_type_alias.ml  test_poly_adt.expected.elpi  test_poly_adt.expected.ml  test_poly_adt.ml  test_poly_alias.expected.elpi  test_poly_alias.expected.ml  test_poly_alias.ml  test_simple_adt.expected.elpi  test_simple_adt.expected.ml  test_simple_adt.ml  test_simple_adt_record.expected.elpi  test_simple_adt_record.expected.ml  test_simple_adt_record.ml  test_simple_contextual.expected.elpi  test_simple_contextual.expected.ml  test_simple_contextual.ml  test_simple_record.expected.elpi  (+5 more)
ppxfindcache/: dune  ppxfindcache.cacheonly.ml  ppxfindcache.useppx.ml  ppxfindcache_aux.ml
src/: API.ml  API.mli  Makefile  ast.ml  ast.mli  bl.ml  bl.mli  builtin.elpi  builtin.ml  builtin.mli  builtin_map.elpi  builtin_ppx.elpi  builtin_set.elpi  builtin_stdlib.elpi  compiler.ml  compiler.mli  compiler_data.ml  data.ml  discrimination_tree.ml  discrimination_tree.mli  discrimination_tree_indexing.ml  discrimination_tree_jump_to.ml  dune  dune.config  elpi-checker.elpi  elpi-quoted_syntax.elpi  elpi.ml  elpi.mli  elpi2html.elpi  elpi_API.ml  elpi_API.mli  elpi_ast.ml  elpi_ast.mli  elpi_builtin.ml  elpi_builtin.mli  elpi_compiler.ml  elpi_compiler.mli  elpi_custom.ml  elpi_custom.mli  elpi_data.ml  (+39 more)
src/.ppcache/: API.ml  API.mli  ast.ml  ast.mli  builtin.mli  compiler.ml  compiler.mli  data.ml  runtime_trace_off.ml  runtime_trace_off.mli  runtime_trace_on.ml  runtime_trace_on.mli  util.ml  util.mli
src/compiler/: compiler.ml  compiler.mli  compiler_data.ml  determinacy_checker.ml  determinacy_checker.mli  dune  mode_checker.ml  spilling.ml  spilling.mli  test_compiler_data.ml  test_type_checker.ml  test_union_find.ml  type_checker.ml  type_checker.mli  union_find.ml  union_find.mli
src/legacy_parser/: dune  parser.ml  parser.mli
src/parser/: README.md  ast.ml  ast.mli  dune  error_messages.txt  gen_infix_lexer.ml  gen_token_precedence.ml  grammar.mly  lexer.mll.in  lexer_config.ml  parse.ml  parse.mli  parser_config.ml  test_lexer.ml  test_parser.ml  token_precedence.mly  tokens.mly
src/runtime/: bl.ml  bl.mli  data.ml  discrimination_tree.ml  discrimination_tree.mli  dune  ptmap.ml  ptmap.mli  runtime.ml  runtime.mli  runtime_trace_off.ml  test_bl.ml  test_discrimination_tree.ml  test_lex.ml
src/utils/: discrimination_tree.ml  dune  union_find.ml  union_find.mli  util.ml  util.mli
tests/sources/: GH_issue_19.elpi  accumulate_twice1.elpi  accumulate_twice2.elpi  accumulated.elpi  ackermann.elpi  asclause.elpi  bad_index.elpi  beta.elpi  block.elpi  broken_trace1.json  broken_trace2.json  bug-256.elpi  bug_226.elpi  bug_407.ml  chr-scope-change-failure.elpi  chr-scope-change.elpi  chr-scope.elpi  chr.elpi  chrGCD.elpi  chrLEQ.elpi  chr_cut.elpi  chr_nokey.elpi  chr_nokey2.elpi  chr_not_clique.elpi  chr_sem.elpi  chr_with_hypotheses.elpi  conj2.elpi  crypt.elpi  crypt.mod  ctx_loading.elpi  cut.elpi  cut2.elpi  cut3.elpi  cut4.elpi  cut5.elpi  cut6.elpi  deep_indexing.elpi  discard.elpi  dt.elpi  dt1.elpi  (+229 more)
trace/: depend  dune  elpi  elpi.byte  merlinppx.ml  runtime.ml  runtime.mli  trace.ml  trace_ppx.ml
trace/ppx/: dune  merlinppx.noop.ml  trace_ppx.ml  version_parser.ml
trace/runtime/: dune  runtime.ml  runtime.mli
(+2145 files in other folders)
