(executable
  (name elpi_REPL)
  (public_name elpi)
  (libraries elpi)
  (modules elpi_REPL)
)

(executable
  (name ppxfindcache)
  (public_name ppxfindcache)
  (modules ppxfindcache ppxfindcache_aux)
  (libraries unix
    (select ppxfindcache.ml from
      (elpi.trace_ppx -> ppxfindcache.useppx.ml)
      (-> ppxfindcache.cacheonly.ml)))
)

(vendored_dirs vendor)
