(library
  (name ppxfindcache_aux)
  (modules ppxfindcache_aux))

(executable
  (name ppxfindcache)
  (public_name ppxfindcache_elpi_trace_deriving_std)
  (modules ppxfindcache)
  (libraries unix re ppxfindcache_aux
    (select ppxfindcache.ml from
      (elpi.trace.ppx ppx_deriving.std -> ppxfindcache.useppx.ml)
      (-> ppxfindcache.cacheonly.ml)))
  (flags -linkall)
)

(executable
  (name ppxfindcache2)
  (public_name ppxfindcache_deriving_std)
  (modules ppxfindcache2)
  (libraries unix re ppxfindcache_aux
    (select ppxfindcache2.ml from
      (ppx_deriving.std -> ppxfindcache2.useppx.ml)
      (-> ppxfindcache2.cacheonly.ml)))
  (flags -linkall)
)

(rule (copy# ppxfindcache.useppx.ml ppxfindcache2.useppx.ml))
(rule (copy# ppxfindcache.cacheonly.ml ppxfindcache2.cacheonly.ml))