(library
  (name ppxfindcache_aux)
  (modules ppxfindcache_aux))

(executable
  (name ppxfindcache)
  (modules ppxfindcache)
  (libraries unix re ppxfindcache_aux
    (select ppxfindcache.ml from
      (elpi.trace.ppx ppx_deriving.std -> ppxfindcache.useppx.ml)
      (-> ppxfindcache.cacheonly.ml)))
  (flags -linkall))

(executable
  (name ppxfindcache2)
  (modules ppxfindcache2)
  (libraries unix re ppxfindcache_aux
    (select ppxfindcache2.ml from
      (ppx_deriving.std -> ppxfindcache2.useppx.ml)
      (-> ppxfindcache2.cacheonly.ml)))
  (flags -linkall))

(rule (copy# ppxfindcache.useppx.ml ppxfindcache2.useppx.ml))
(rule (copy# ppxfindcache.cacheonly.ml ppxfindcache2.cacheonly.ml))
