(library 
  (name trace_ppx)
  (public_name elpi.trace_ppx)
  (libraries ppx_tools_versioned ocaml-migrate-parsetree)
  (preprocess (pps ppx_tools_versioned.metaquot_404))
  (kind ppx_rewriter)
  (ppx_runtime_libraries elpi.trace)
  (modules trace_ppx)
)

(library 
  (name trace)
  (public_name elpi.trace)
  (libraries re)
  (modules trace runtime)
)
