(library (name sepcomp) (modules sepcomp_template) (libraries elpi))
(executable (name sepcomp1) (modules sepcomp1) (libraries sepcomp))
(executable (name sepcomp2) (modules sepcomp2) (libraries sepcomp))
(executable (name sepcomp3) (modules sepcomp3) (libraries sepcomp))
(executable (name sepcomp4) (modules sepcomp4) (libraries sepcomp))
(executable (name sepcomp5) (modules sepcomp5) (libraries sepcomp))
(executable (name sepcomp6) (modules sepcomp6) (libraries sepcomp))
(executable (name sepcomp7) (modules sepcomp7) (libraries sepcomp))
(executable (name sepcomp8) (modules sepcomp8) (libraries sepcomp))
(executable (name sepcomp9) (modules sepcomp9) (libraries sepcomp))
(executable (name sepcomp_perf1) (modules sepcomp_perf1) (libraries sepcomp))
(executable (name sepcomp_perf2) (modules sepcomp_perf2) (libraries sepcomp))
(executable (name sepcomp_perf3) (modules sepcomp_perf3) (libraries sepcomp))
(executable (name sepcomp_perf4) (modules sepcomp_perf4) (libraries sepcomp))
(executable (name sepcomp_perf5) (modules sepcomp_perf5) (libraries sepcomp))
(executable (name sepcomp_tyid)  (modules sepcomp_tyid)  (libraries sepcomp))
(executable (name sepcomp_tyid2)  (modules sepcomp_tyid2)  (libraries sepcomp))